fixed homepage boxes to wrap for mobile devices

--- a/styles.css
+++ b/styles.css
@@ -66,4 +66,6 @@ img {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
 }
